# PyChemicals

./: .gitignore  404.html  LICENSE  README.md  __init__.py  __main__.py  astro.config.mjs  chemicals.py  index.html  package.json  pnpm-lock.yaml  predefined_chemicals.py  pyproject.toml  requirements.txt  sitemap-0.xml  titration_calculation.py  titration_curves.py
.github/workflows/: pylint.yml
Docs/: astro.config.mjs  package.json
Docs/src/assets/: logo.svg:Zone.Identifier
PyChemicals/: __init__.py  __main__.py  chemicals.db  chemicals.py  chemicals_db.py  predefined_chemicals.py  titration_calculation.py  titration_curves.py
_astro/: index.B6pQWfhX.css
guides/example/: index.html
guides/quickstart/: index.html
pagefind/: pagefind-entry.json  pagefind.en_1cc49c8259.pf_meta  pagefind.en_525e797eaf.pf_meta  pagefind.en_b13a9faca2.pf_meta
pagefind/fragment/: en_198f10d.pf_fragment  en_2f7628e.pf_fragment
pagefind/index/: en_8a50386.pf_index  en_d2b75dc.pf_index
reference/example/: index.html
src/content/docs/: index.mdx
src/content/docs/guides/: quickstart.mdx
src/styles/: globals.css
tests/: conftest.py  test_chemicals.py  test_chemicals_db.py  test_predefined.py  test_titration.py  test_titrations_advanced.py
