[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyChemicals"
version = "0.1.0"
authors = [
    {name = "Your Name"}
]
description = "A Python package for chemical calculations"
requires-python = ">=3.7"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[tool.hatch.build.targets.wheel]
# Point to the package directory rather than the root.
packages = ["PyChemicals"]

[tool.pytest.ini_options]
# Ensure that the project root is on the PYTHONPATH so that tests can import PyChemicals.
pythonpath = [
    "."
]
