[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyChemicals"
version = "0.0.1"
authors = [
    {name = "Shoaib Nigam Shaik", email="shoaibnigam422@gmail.com"}
]
description = "A Python package for chemical calculations"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pylint",
    "cs50"
]

[project.urls]
Homepage = "https://github.com/Shoaib-Programmer/PyChemicals"
Issues = "https://github.com/Shoaib-Programmer/PyChemicals/issues"
Docs = "https://shoaib-programmer.github.io/PyChemicals"

[tool.hatch.build.targets.wheel]
# Point to the package directory rather than the root.
packages = ["PyChemicals"]

[tool.pytest.ini_options]
# Ensure that the project root is on the PYTHONPATH so that tests can import PyChemicals.
pythonpath = [
    "."
]
